build:front-end panel

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Example App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link href="/stylesheets/font-awesome/css/fontawesome.css" rel="stylesheet" />
+  <link href="/stylesheets/font-awesome/css/brands.css" rel="stylesheet" />
+  <link href="/stylesheets/font-awesome/css/solid.css" rel="stylesheet" />
+  <title>Random Password Generator</title>
 </head>
 
-<body>
+<!-- Navbar -->
+<nav class="navbar navbar-dark bg-secondary fixed-top" data-bs-theme="secondary">
+  <div class="container-fluid">
+    <span class="navbar-brand text-white">Random Password Generator</span>
+  </div>
+</nav>
 
-  {{{body}}}
-
+<body class="bg-dark mt-5 p-3 d-flex justify-content-center">
+  {{{ body }}}
+  <script src="/javascripts/bootstrap.bundle.min.js"></script>
 </body>
 
-</html>
+</html><!DOCTYPE html>
