build:add function of executing exclude characters

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,7 +61,7 @@
   <div class="row mb-3">
     <label for="excludecharacters" class="col-sm-4 col-form-label">Exclude Characters</label>
     <div class="col-sm-6">
-      <input type="text" class="form-control" id="excludecharacters">
+      <input name="passwordExclude" type="text" class="form-control" id="excludecharacters">
             <div id="exclude-characters-description" class="form-text">
               These characters will not appear in the password
             </div>
