--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
   <div class="row mb-3">
     <label for="password-length" class="col-sm-4 col-form-label">Password Length</label>
     <div class="col-sm-6">
-      <input name="passwordlength" value="" type="number" min="4" max="16" class="form-control" id="password-length" inputmode="numeric" required>
+      <input name="passwordlength" type="number" min="4" max="16" class="form-control" id="password-length" inputmode="numeric" value="{{options.passwordlength}}" required>
       <div id="password-length-description" class="form-text">
         Length is available between 4 ~ 16
       </div>
@@ -23,7 +23,7 @@
         <div class="col-sm-6">
           <div class="form-check">
             <label class="form-check-label" for="gridCheck1">(e.g. abcdefg)</label>
-            <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck1" value="checkbox1">
+            <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck1" value="checkbox1" {{#if checkboxObj.[0]}}checked{{/if}}>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
         <div class="col-sm-6">
           <div class="form-check">
             <label class="form-check-label" for="gridCheck2">(e.g. ABCDEFG)</label>
-            <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck2" value="checkbox2">
+            <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck2" value="checkbox2" {{#if checkboxObj.[1]}}checked{{/if}}>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
         <div class="col-sm-6">
           <div class="form-check">
             <label class="form-check-label" for="gridCheck3">(e.g. 123456)</label>
-            <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck3" value="checkbox3">
+            <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck3" value="checkbox3" {{#if checkboxObj.[2]}}checked{{/if}}>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
             <div class="col-sm-6">
               <div class="form-check">
                 <label class="form-check-label" for="gridCheck4">(e.g. @#$%)</label>
-                <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck4" value="checkbox4">
+                <input name="checkboxes" class="form-check-input" type="checkbox" id="gridCheck4" value="checkbox4" {{#if checkboxObj.[3]}}checked{{/if}}>
               </div>
             </div>
           </div>
